--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ canonifyurls = true
 # Override these settings with your own
 title = "codex"
 languageCode = "en-us"
-baseURL = "https://example.org/"
+baseURL = "https://tsumli.github.io/"
 copyright = "© {year}"
 
 # Add your Disqus shortname here.
