--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ googleAnalytics = "UA-188554402-1"
   # Links to your social accounts, comment/uncomment as needed. Icons will be displayed for those specified.
   # twitter = "https://twitter.com/GoHugoIO"
   github = "https://github.com/tsumli"
-  # email = "mailto:<your email>"
+  # email = "tsumli.kt (at) gmail.com"
   # mastodon = "https://mastodon.social/@nickname"
   # facebook = "https://facebook.com/<your handle>"
   # gitlab = "https://gitlab.com/<your handle>"
@@ -45,7 +45,7 @@ googleAnalytics = "UA-188554402-1"
   # Titles for your icons (shown as tooltips), and also their display order.
   # Currently, these icons are supported: 
   #   "Twitter", "GitHub", "Email", "Mastodon", "Facebook", "GitLab", "Instagram", "LinkedIn", "YouTube"
-  iconOrder = ["Twitter", "GitHub"]
+  iconOrder = ["GitHub"]
 
   # Metadata for Twitter cards, defaults to params.twitter
   # twitterSite = "@<your handle>"
