add build_pages to github actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     command:
       hugo new blog/optimal-transport/introduction/main.md
 
-  build_site:
+  build_pages:
     image:
       "trenton/hugo-extended"
     ports:
