--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -23,11 +23,5 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Run a build_pages
+        run: docker-compose -f $GITHUB_WORKSPACE/docker/docker-compose.yml up
