path in build_pages.yml

--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -24,4 +24,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a build_pages
-        run: docker-compose -f $GITHUB_WORKSPACE/docker/docker-compose.yml up
+        run: docker-compose -f $GITHUB_WORKSPACE/.github/docker/docker-compose.yml up
