--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       - 1313:1313
     user: "1000:1000"
     volumes:
-      - ./:/site
+      - $GITHUB_WORKSPACE/:/site
     command:
       hugo 
