--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -31,4 +31,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./doc
+          publish_branch: main
+
 
