give up gh_pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,13 +33,13 @@ services:
   #   command:
   #     python /workdir/replace_.py
 
-  # build_pages:
-  #   image:
-  #     "trenton/hugo-extended"
-  #   ports:
-  #     - 1313:1313
-  #   user: "1000:1000"
-  #   volumes:
-  #     - ./:/site
-  #   command:
-  #     hugo 
+  build_pages:
+    image:
+      "trenton/hugo-extended"
+    ports:
+      - 1313:1313
+    user: "1000:1000"
+    volumes:
+      - ./:/site
+    command:
+      hugo --minify
