--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,20 +11,20 @@ services:
       true
     command:
       hugo server -D -p 1313 --bind 0.0.0.0
-    user: "1000:1000"
+    user: "${LOCALUID}:${LOCALGID}"
   
   newpost:
     image:
       "trenton/hugo-extended"
     ports:
       - 1313:1313
-    user: "1000:1000"
+    user: "${LOCALUID}:${LOCALGID}"
     volumes:
       - ./:/site
     tty:
       true
     command:
-      hugo new blog/optimal-transport/introduction/main.md
+      hugo new ${NAME}
 
   # replace:
   #   image: "python:3.8-alpine"
@@ -38,7 +38,7 @@ services:
       "trenton/hugo-extended"
     ports:
       - 1313:1313
-    user: "1000:1000"
+    user: "${LOCALUID}:${LOCALGID}"
     volumes:
       - ./:/site
     command:
