--- a/config.toml
+++ b/config.toml
@@ -64,6 +64,8 @@ pygmentsUseClasses = true
   # Set to true to display page title in table of contents in blog posts.
   showPageTitleInTOC = true
 
+  # custom_css = ["css/lightbox.min.css"]
+
 # This disables Hugo's default syntax highlighting in favor
 # of prismjs. If you wish to use Hugo's default syntax highlighting
 # over prismjs, remove this. You will also need to remove the prismjs
