--- a/hugo.toml
+++ b/hugo.toml
@@ -26,7 +26,7 @@ enableTwemoji = true
 colorScheme = "auto"
 hidecolorschemetoggle = true
 
-# customCSS = ["css/custom.css"]
+customCSS = ["css/custom.css"]
 # customSCSS = ["scss/custom.scss"]
 # customJS = ["js/custom.js"]
 
