--- a/hugo.toml
+++ b/hugo.toml
@@ -31,6 +31,12 @@ customCSS = ["css/custom.css"]
 # customSCSS = ["scss/custom.scss"]
 # customJS = ["js/custom.js"]
 
+[taxonomies]
+category = "categories"
+series = "series"
+tag = "tags"
+author = "authors"
+
 # Social links
 [[params.social]]
 name = "kaggle"
