post: vulkan slang (#16)
* wip

* wip

* update

* wip

* update

--- a/hugo.toml
+++ b/hugo.toml
@@ -13,11 +13,12 @@ shortname = "tsumli"
 
 [markup.highlight]
 style = "github-dark"
+guessSyntax = true
+lineNos = true
+codeFences = true
 
 [params]
 faviconSVG = "/img/favicon.svg"
-favicon_32 = "/img/favicon-32x32.png"
-favicon_16 = "/img/favicon-16x16.png"
 
 since = 2019
 
